# flack

./: CODE_OF_CONDUCT.md  README.md  flack.nix  flake.nix  lib.nix  module.nix
apps/: default.nix  eval-packages.nix  search.nix
lib/: flack.nix  flake.nix  lib.nix  module.nix  nixos-module.nix  preload.tar
netboot/: README.md  flake.nix
netboot/apps/: default.nix
netboot/nixos/tests/: netboot.nix
netboot/systems/: netboot.nix
netboot/systems/netboot/: flack.nix
presentation/: README.md  flake.nix
presentation/apps/: default.nix  script.js  slide.css
rust/: Cargo.toml  bindgen-gcc.sh  default.nix
rust/flack-serve/: Cargo.toml
rust/flack-serve/src/: idc.nix  main.rs
rust/nix-bindings-rust/: CHANGELOG.md  Cargo.toml  README.md  flake.nix  input-propagation-workaround.nix  nci.nix
rust/nix-bindings-rust/dev/: flake-module.nix  flake.nix
rust/nix-bindings-rust/doc/hacking/: test-ffi.md
rust/nix-bindings-rust/doc/maintainers/: release.md
rust/nix-bindings-rust/nix-bindings-bdwgc-sys/: Cargo.toml  README.md  build.rs
rust/nix-bindings-rust/nix-bindings-bdwgc-sys/include/: bdwgc.h
rust/nix-bindings-rust/nix-bindings-bdwgc-sys/src/: lib.rs
rust/nix-bindings-rust/nix-bindings-expr/: Cargo.toml  README.md  build.rs
rust/nix-bindings-rust/nix-bindings-expr-sys/: Cargo.toml  README.md  build.rs
rust/nix-bindings-rust/nix-bindings-expr-sys/include/: nix-c-expr.h
rust/nix-bindings-rust/nix-bindings-expr-sys/src/: lib.rs
rust/nix-bindings-rust/nix-bindings-expr/src/: primop.rs
rust/nix-bindings-rust/nix-bindings-expr/src/value/: __private.rs
rust/nix-bindings-rust/nix-bindings-fetchers/: Cargo.toml  README.md
rust/nix-bindings-rust/nix-bindings-fetchers-sys/: Cargo.toml  README.md  build.rs
rust/nix-bindings-rust/nix-bindings-fetchers-sys/include/: nix-c-fetchers.h
rust/nix-bindings-rust/nix-bindings-fetchers-sys/src/: lib.rs
rust/nix-bindings-rust/nix-bindings-fetchers/src/: lib.rs
rust/nix-bindings-rust/nix-bindings-flake/: Cargo.toml  README.md
rust/nix-bindings-rust/nix-bindings-flake-sys/: Cargo.toml  README.md  build.rs
rust/nix-bindings-rust/nix-bindings-flake-sys/include/: nix-c-flake.h
rust/nix-bindings-rust/nix-bindings-flake-sys/src/: lib.rs
rust/nix-bindings-rust/nix-bindings-flake/src/: lib.rs
rust/nix-bindings-rust/nix-bindings-store/: Cargo.toml  README.md  build.rs  build.rs.orig
rust/nix-bindings-rust/nix-bindings-store-sys/: Cargo.toml  README.md  build.rs
rust/nix-bindings-rust/nix-bindings-store-sys/src/: lib.rs
rust/nix-bindings-rust/nix-bindings-store/src/: lib.rs  store.rs
rust/nix-bindings-rust/nix-bindings-store/src/derivation/: harmonia.rs  mod.rs
rust/nix-bindings-rust/nix-bindings-store/src/path/: harmonia.rs  mod.rs
rust/nix-bindings-rust/nix-bindings-util/: Cargo.toml  README.md
rust/nix-bindings-rust/nix-bindings-util-sys/: Cargo.toml  README.md  build.rs
rust/nix-bindings-rust/nix-bindings-util-sys/include/: nix-c-util.h
rust/nix-bindings-rust/nix-bindings-util-sys/src/: lib.rs
rust/nix-bindings-rust/nix-bindings-util/src/: context.rs  lib.rs  nix_version.rs  settings.rs  string_return.rs
rust/nix-expr/src/: eval_state.rs  value.rs
search/: README.md  flake.nix
search/apps/: default.nix  eval-packages.nix
