[package]
name = "flack"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "flack-serve"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-files = "0.6.8"
serde = { version = "1.0.228", features = ["serde_derive"] }
clap = { version = "4.5.51", features = ["derive"] }
log = "0.4.28"
url = "2.5.7"
env_logger = "0.11.8"
tokio = { version = "1", features = ["full"] }

nix-bindings-expr = { path = "../nix-bindings-rust/nix-bindings-expr" }
nix-bindings-fetchers = { path = "../nix-bindings-rust/nix-bindings-fetchers" }
nix-bindings-flake = { path = "../nix-bindings-rust/nix-bindings-flake" }
nix-bindings-store = { path = "../nix-bindings-rust/nix-bindings-store" }
nix-bindings-util = { path = "../nix-bindings-rust/nix-bindings-util" }

#nix-bindings-expr = { git = "https://github.com/numinit/nix-bindings-rust.git" }
#nix-bindings-fetchers = { git = "https://github.com/numinit/nix-bindings-rust.git" }
#nix-bindings-flake = { git = "https://github.com/numinit/nix-bindings-rust.git" }
#nix-bindings-store = { git = "https://github.com/numinit/nix-bindings-rust.git" }
#nix-bindings-util = { git = "https://github.com/numinit/nix-bindings-rust.git" }

[dependencies.uuid]
version = "1.18.1"
features = [
    "v7"
]
