[package]
name = "nix-bindings-bdwgc-sys"
version = "0.2.1"
edition = "2021"
build = "build.rs"
license = "LGPL-2.1"
description = "Low-level FFI bindings to the Boehm-Demers-Weiser garbage collector"
repository = "https://github.com/nixops4/nix-bindings-rust"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]

[build-dependencies]
bindgen = "0.69"
pkg-config = "0.3"
