[package]
name = "nix-bindings-expr-sys"
version = "0.2.1"
edition = "2021"
build = "build.rs"
license = "LGPL-2.1"
description = "Low-level FFI bindings to the Nix expression evaluator"
repository = "https://github.com/nixops4/nix-bindings-rust"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
nix-bindings-util-sys = { path = "../nix-bindings-util-sys", version = "0.2.1" }
nix-bindings-store-sys = { path = "../nix-bindings-store-sys", version = "0.2.1" }

[build-dependencies]
bindgen = "0.69"
pkg-config = "0.3"
